// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page shows loading if products are not loaded yet 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div
      class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-progressBar-1 MuiLinearProgress-indeterminate"
      role="progressbar"
    >
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
      />
      <div
        class="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
      />
    </div>
  </div>
</div>
`;

exports[`Home Page shows the product from api call 1`] = `
<div
  class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
>
  <div
    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
  >
    <div>
      DataTable Component
    </div>
  </div>
</div>
`;
